Update headertop so it's hidden to avoid overflow with Logo when screen width reduced

--- a/wp-content/themes/farceur/style.css
+++ b/wp-content/themes/farceur/style.css
@@ -190,6 +190,7 @@ img.size-large,
 
 #headertop {
 	height: 30px;
+	overflow: hidden;
 }
 
 #headermsg {
